testcases/semantic/valid/array5.rs
const MAXN: i32 = 15;
fn main() {
    let A: [i32; MAXN as usize] = [1; 15];
    let B: [i32; (MAXN + 1) as usize] = [1; 16];
    exit(0);
}
