testcases/semantic/invalid/array3.rs
fn main() {
    const C: i32 = 2;
    let B: [u32; C + 1] = [0; 2]; // Constant item.
}
